# fastapi-echo

./: .pre-commit-config.yaml  README.md  pyproject.toml
echo/: main.py
tests/: test_echo.py
